plugins {
    id 'java'
    id 'jacoco'
    id 'org.springframework.boot' version '4.1.0'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.bemo'
version = '0.0.1-SNAPSHOT'
description = 'Bemo ERP business operations platform'

springBoot {
    buildInfo()
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-liquibase'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
    implementation 'org.apache.poi:poi-ooxml:5.5.1'
    compileOnly 'org.projectlombok:lombok:1.18.46'
    annotationProcessor 'org.projectlombok:lombok:1.18.46'

    runtimeOnly 'org.postgresql:postgresql'
    runtimeOnly 'com.h2database:h2'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
    testCompileOnly 'org.projectlombok:lombok:1.18.46'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.46'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    testImplementation platform('org.testcontainers:testcontainers-bom:1.21.3')
    testImplementation 'org.testcontainers:junit-jupiter'
    testImplementation 'org.testcontainers:postgresql'
}

tasks.named('test') {
    useJUnitPlatform()
    finalizedBy tasks.named('jacocoTestReport')
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.release = 17
    options.compilerArgs += ['-parameters']
}

def frontendDirectory = file('../fe')
def frontendOutput = layout.buildDirectory.dir('generated/frontend')

tasks.register('buildFrontend', Exec) {
    workingDir frontendDirectory
    commandLine System.getProperty('os.name').toLowerCase().contains('windows') ? 'npm.cmd' : 'npm',
            'run', 'build', '--', '--output-path', frontendOutput.get().asFile.absolutePath
    inputs.files(fileTree(frontendDirectory) {
        include 'src/**', 'public/**', 'angular.json', 'package.json', 'package-lock.json', 'tsconfig*.json'
        exclude 'node_modules/**', 'dist/**'
    })
    outputs.dir(frontendOutput)
}

tasks.named('bootJar') {
    dependsOn tasks.named('buildFrontend')
}

tasks.named('processResources') {
    mustRunAfter tasks.named('buildFrontend')
    from(frontendOutput.map { it.dir('browser') }) {
        into 'static'
    }
}
